# JointSBM

./: .gitignore  README.md  Simple example.ipynb  additional_experiments.md  isoSBM.py  iso_spec.py  jointSBM.py  joint_spec.py  pyproject.toml  requirements.txt
data/N_100_fixed_200_alpha_20/: Graph1.edge  Graph1.memb  Graph10.edge  Graph10.memb  Graph100.edge  Graph100.memb  Graph11.edge  Graph11.memb  Graph12.edge  Graph12.memb  Graph13.edge  Graph13.memb  Graph14.edge  Graph14.memb  Graph15.edge  Graph15.memb  Graph16.edge  Graph16.memb  Graph17.edge  Graph17.memb  Graph18.edge  Graph18.memb  Graph19.edge  Graph19.memb  Graph2.edge  Graph2.memb  Graph20.edge  Graph20.memb  Graph21.edge  Graph21.memb  Graph22.edge  Graph22.memb  Graph23.edge  Graph23.memb  Graph24.edge  Graph24.memb  Graph25.edge  Graph25.memb  Graph26.edge  Graph26.memb  (+161 more)
data/N_2000_fixed_50_alpha_1/: Graph1.edge  Graph1.memb  Graph10.edge  Graph10.memb  Graph100.edge  Graph100.memb  Graph1000.edge  Graph1000.memb  Graph1001.edge  Graph1001.memb  Graph1002.edge  Graph1002.memb  Graph1003.edge  Graph1003.memb  Graph1004.edge  Graph1004.memb  Graph1005.edge  Graph1005.memb  Graph1006.edge  Graph1006.memb  Graph1007.edge  Graph1007.memb  Graph1008.edge  Graph1008.memb  Graph1009.edge  Graph1009.memb  Graph101.edge  Graph101.memb  Graph1010.edge  Graph1010.memb  Graph1011.edge  Graph1011.memb  Graph1012.edge  Graph1012.memb  Graph1013.edge  Graph1013.memb  Graph1014.edge  Graph1014.memb  Graph1015.edge  Graph1015.memb  (+3961 more)
data/N_500_varying_mu200size1_alpha_1.67/: Graph1.edge  Graph1.memb  (+999 more)
utils/: utils.py
(+11 files in other folders)
