[tool.poetry]
name = "jointsbm"
version = "0.1.0"
description = "This is package performs community dectection over a heterogenous population of non-aligned networks using joint spectral clustering."
authors = ["Guilherme Gomes"]
license = "mit"
readme = "README.md"
packages = [{include = "jointsbm"}]

[tool.poetry.dependencies]
python = "^3.13"
numpy = "^2.3.3"
pandas = "^2.3.3"
scikit-learn = "^1.7.2"
scipy = "^1.16.2"


[tool.poetry.group.dev.dependencies]
tqdm = "^4.67.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
